// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`jest-supertest project creates expected package.json 1`] = `
"{
  \\"name\\": \\"TestingProject\\",
  \\"version\\": \\"0.1.0\\",
  \\"description\\": \\"Example\\",
  \\"engines\\": {
    \\"node\\": \\"8.9.12\\",
    \\"npm\\": \\"6.4.1\\"
  },
  \\"scripts\\": {
    \\"console\\": \\"node console.js\\",
    \\"cover\\": \\"npm run test -- --coverage\\",
    \\"test\\": \\"NODE_ENV=testing jest --runInBand --forceExit --detectOpenHandles\\",
    \\"test-inspect\\": \\"NODE_ENV=testing node --inspect --debug-brk jest\\",
    \\"eslint-check\\": \\"eslint --print-config .eslintrc.js --ignore-pattern ./.eslintrc.js | eslint-config-prettier-check\\",
    \\"lint\\": \\"eslint \\\\\\"**/*.js\\\\\\" --ignore-pattern ./.eslintrc.js\\",
    \\"lint-diff\\": \\"git diff --diff-filter=ACM --name-only --cached --relative | grep \\\\\\\\\\\\\\\\.js$ | xargs eslint\\",
    \\"lint-fix\\": \\"npm run lint -- --fix\\",
    \\"outdated\\": \\"npm outdated --depth 0\\",
    \\"pretest\\": \\"npm run lint\\",
    \\"start-dev\\": \\"nodemon --inspect server.js\\",
    \\"prestart-dev\\": \\"npm run lint\\",
    \\"start\\": \\"node server.js\\",
    \\"seed\\": \\"sequelize db:seed:all\\",
    \\"create-seed\\": \\"sequelize seed:generate --name\\",
    \\"create-migration\\": \\"sequelize migration:generate --name\\"
  },
  \\"cacheDirectories\\": [
    \\"node_modules\\"
  ],
  \\"main\\": \\"app.js\\",
  \\"author\\": \\"Wolox\\",
  \\"homepage\\": \\"https://test.com.ar\\",
  \\"license\\": \\"MIT\\",
  \\"repository\\": {
    \\"type\\": \\"git\\",
    \\"url\\": \\"https://test.com.ar.git\\"
  },
  \\"bugs\\": {
    \\"url\\": \\"https://test.com.ar/issues\\",
    \\"email\\": \\"tls@wolox.com.ar\\"
  },
  \\"jest\\": {
    \\"coverageThreshold\\": {
      \\"global\\": {
        \\"branches\\": 80,
        \\"functions\\": 80,
        \\"lines\\": 80,
        \\"statements\\": 80
      }
    },
    \\"collectCoverageFrom\\": [
      \\"**/*.js\\",
      \\"!**/console.js\\",
      \\"!**/node_modules/**\\",
      \\"!**/build/**\\",
      \\"!**/migrations/**\\",
      \\"!**/config/**\\",
      \\"!**/scripts/**\\"
    ],
    \\"setupFilesAfterEnv\\": [
      \\"<rootDir>/test/setup.js\\"
    ],
    \\"testEnvironment\\": \\"node\\",
    \\"transform\\": {
      \\"^.+\\\\\\\\.js$\\": \\"babel-jest\\"
    }
  },
  \\"dependencies\\": {
    \\"bcryptjs\\": \\"^2.4.3\\",
    \\"body-parser\\": \\"^1.19.0\\",
    \\"express\\": \\"^4.17.1\\",
    \\"jwt-simple\\": \\"^0.5.6\\",
    \\"umzug\\": \\"^2.3.0\\",
    \\"express-wolox-logger\\": \\"^2.0.0\\",
    \\"axios\\": \\"^0.24.0\\",
    \\"swagger-ui-express\\": \\"^4.1.6\\"
  },
  \\"devDependencies\\": {
    \\"babel\\": \\"6.23.0\\",
    \\"babel-core\\": \\"^6.26.3\\",
    \\"babel-eslint\\": \\"^10.1.0\\",
    \\"babel-jest\\": \\"^27.3.1\\",
    \\"jest\\": \\"^27.3.1\\",
    \\"supertest\\": \\"^6.1.6\\",
    \\"babel-preset-es2015\\": \\"6.24.1\\",
    \\"dotenv\\": \\"^10.0.0\\",
    \\"eslint\\": \\"^6.8.0\\",
    \\"eslint-config-wolox\\": \\"^4.0.0\\",
    \\"eslint-config-wolox-node\\": \\"^3.0.0\\",
    \\"eslint-plugin-import\\": \\"^2.25.2\\",
    \\"eslint-plugin-prettier\\": \\"^3.0.1\\",
    \\"husky\\": \\"^7.0.4\\",
    \\"istanbul\\": \\"^0.4.3\\",
    \\"mocha\\": \\"^9.1.3\\",
    \\"mocha-lcov-reporter\\": \\"^1.3.0\\",
    \\"nodemon\\": \\"^2.0.14\\",
    \\"prettier\\": \\"^1.15.3\\",
    \\"prettier-eslint\\": \\"^9.0.1\\",
    \\"prompt\\": \\"^1.2.0\\"
  },
  \\"husky\\": {
    \\"hooks\\": {
      \\"pre-commit\\": \\"npm run lint-diff\\",
      \\"pre-push\\": \\"npm test\\"
    }
  }
}
"
`;

exports[`mocha-chai project creates expected package.json 1`] = `
"{
  \\"name\\": \\"TestingProject\\",
  \\"version\\": \\"0.1.0\\",
  \\"description\\": \\"Example\\",
  \\"engines\\": {
    \\"node\\": \\"8.9.12\\",
    \\"npm\\": \\"6.4.1\\"
  },
  \\"scripts\\": {
    \\"console\\": \\"node console.js\\",
    \\"cover\\": \\"NODE_ENV=testing istanbul cover ./node_modules/mocha/bin/_mocha  test/app.spec.js\\",
    \\"test\\": \\"NODE_ENV=testing ./node_modules/mocha/bin/_mocha --timeout 6000 --exit test/app.spec.js\\",
    \\"test-inspect\\": \\"NODE_ENV=testing node --inspect-brk ./node_modules/mocha/bin/_mocha test/app.spec.js\\",
    \\"eslint-check\\": \\"eslint --print-config .eslintrc.js --ignore-pattern ./.eslintrc.js | eslint-config-prettier-check\\",
    \\"lint\\": \\"eslint \\\\\\"**/*.js\\\\\\" --ignore-pattern ./.eslintrc.js\\",
    \\"lint-diff\\": \\"git diff --diff-filter=ACM --name-only --cached --relative | grep \\\\\\\\\\\\\\\\.js$ | xargs eslint\\",
    \\"lint-fix\\": \\"npm run lint -- --fix\\",
    \\"outdated\\": \\"npm outdated --depth 0\\",
    \\"pretest\\": \\"npm run lint\\",
    \\"start-dev\\": \\"nodemon --inspect server.js\\",
    \\"prestart-dev\\": \\"npm run lint\\",
    \\"start\\": \\"node server.js\\",
    \\"seed\\": \\"sequelize db:seed:all\\",
    \\"create-seed\\": \\"sequelize seed:generate --name\\",
    \\"create-migration\\": \\"sequelize migration:generate --name\\"
  },
  \\"cacheDirectories\\": [
    \\"node_modules\\"
  ],
  \\"main\\": \\"app.js\\",
  \\"author\\": \\"Wolox\\",
  \\"homepage\\": \\"https://test.com.ar\\",
  \\"license\\": \\"MIT\\",
  \\"repository\\": {
    \\"type\\": \\"git\\",
    \\"url\\": \\"https://test.com.ar.git\\"
  },
  \\"bugs\\": {
    \\"url\\": \\"https://test.com.ar/issues\\",
    \\"email\\": \\"tls@wolox.com.ar\\"
  },
  \\"dependencies\\": {
    \\"bcryptjs\\": \\"^2.4.3\\",
    \\"body-parser\\": \\"^1.19.0\\",
    \\"express\\": \\"^4.17.1\\",
    \\"jwt-simple\\": \\"^0.5.6\\",
    \\"umzug\\": \\"^2.3.0\\",
    \\"express-wolox-logger\\": \\"^2.0.0\\",
    \\"axios\\": \\"^0.24.0\\",
    \\"swagger-ui-express\\": \\"^4.1.6\\"
  },
  \\"devDependencies\\": {
    \\"babel\\": \\"6.23.0\\",
    \\"babel-core\\": \\"^6.26.3\\",
    \\"babel-eslint\\": \\"^10.1.0\\",
    \\"babel-preset-es2015\\": \\"6.24.1\\",
    \\"chai\\": \\"^4.3.4\\",
    \\"chai-http\\": \\"^4.3.0\\",
    \\"dotenv\\": \\"^10.0.0\\",
    \\"eslint\\": \\"^6.8.0\\",
    \\"eslint-config-wolox\\": \\"^4.0.0\\",
    \\"eslint-config-wolox-node\\": \\"^3.0.0\\",
    \\"eslint-plugin-import\\": \\"^2.25.2\\",
    \\"eslint-plugin-prettier\\": \\"^3.0.1\\",
    \\"husky\\": \\"^7.0.4\\",
    \\"istanbul\\": \\"^0.4.3\\",
    \\"mocha\\": \\"^9.1.3\\",
    \\"mocha-lcov-reporter\\": \\"^1.3.0\\",
    \\"nodemon\\": \\"^2.0.14\\",
    \\"prettier\\": \\"^1.15.3\\",
    \\"prettier-eslint\\": \\"^9.0.1\\",
    \\"prompt\\": \\"^1.2.0\\"
  },
  \\"husky\\": {
    \\"hooks\\": {
      \\"pre-commit\\": \\"npm run lint-diff\\",
      \\"pre-push\\": \\"npm test\\"
    }
  }
}
"
`;
